facet-typescript/src/snapshots/facet_typescript__tests__flatten_direct.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 994
expression: ts_direct
---
export interface FlattenDirect {
  name: string;
  x: number;
  y: number;
}
