facet-typescript/src/snapshots/facet_typescript__tests__flatten_map.snap
---
source: facet-typescript/src/lib.rs
expression: ts_map
---
export interface FlattenMap {
  name: string;
  extra: Record<string, string>;
}
