facet-typescript/src/snapshots/facet_typescript__tests__flatten_option.snap
---
source: facet-typescript/src/lib.rs
expression: ts_option
---
export interface FlattenOption {
  name: string;
  x?: number;
  y?: number;
}
