facet-typescript/src/snapshots/facet_typescript__tests__flatten_option_arc.snap
---
source: facet-typescript/src/lib.rs
expression: ts_option_arc
---
export interface FlattenOptionArc {
  name: string;
  x?: number;
  y?: number;
}
