facet-typescript/src/snapshots/facet_typescript__tests__flatten_proxy_struct.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export interface Shape {
  name: string;
  x: number;
  y: number;
}
