facet-typescript/src/snapshots/facet_typescript__tests__flatten_recursive_option_box.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1237
expression: ts
---
export interface Node {
  value: number;
}
