facet-typescript/src/snapshots/facet_typescript__tests__nested_flatten_struct.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export interface Outer {
  name: string;
  x: number;
  y: number;
  z: number;
}
