facet-typescript/src/snapshots/facet_typescript__tests__nested_types.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export interface Outer {
  inner: Inner;
  name: string;
}

export interface Inner {
  value: number;
}
