facet-typescript/src/snapshots/facet_typescript__tests__non_transparent_newtype.snap
---
source: facet-typescript/src/lib.rs
expression: out
---
export interface Envelope {
  id: BacktraceId;
}

export type BacktraceId = [number];
