facet-typescript/src/snapshots/facet_typescript__tests__non_transparent_single_field_tuple_struct.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 1671
expression: ts
---
export type Spread = [number];
