facet-typescript/src/snapshots/facet_typescript__tests__optional_field.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export interface Config {
  required: string;
  optional?: string;
}
